--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -48,7 +48,7 @@
 		
 		<!-- CALL TO ACTION BUTTONS -->
 		<div class="buttons">
-			<a href="#focuse" class="btn btn-primary custom-button red-btn">How?</a>
+			<a href="#focus" class="btn btn-primary custom-button red-btn">How?</a>
 			<a href="#pricingtable" class="btn btn-primary custom-button green-btn">Plans</a>
 		</div>
 		
@@ -1064,23 +1064,7 @@
 </div> <!-- / END CONTAINER -->
 </section> <!-- / END TESTIMONIAL SECTION -->
 
-<!-- =========================
-   PURCHASE NOW       
-============================== -->
 
-<section class="purchase-now">
-<div class="container">
-	<div class="row">
-		<div class="col-md-9">
-			<h3 class="white-text wow fadeInLeft animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
-			Hey, We're at the finishing line. Enjoyed the template? </h3>
-		</div>
-		<div class="col-md-3 wow fadeInRight animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
-			<a href="" class="btn btn-primary custom-button red-btn">Purchase Now</a>
-		</div>
-	</div>
-</div>
-</section> <!-- / END PURCHASE NOW SECTION-->
 
 <!-- =========================
    CONTACT US         
