--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -167,7 +167,7 @@
 	<h3 class="container text wow fadeInLeft animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
 	Our clients love us! You can check what they're saying about us. </h3>
 	<div class="wow fadeInRight animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
-		<a href="" class="btn btn-primary custom-button green-btn">TESTIMONIALS</a>
+		<a href="#testimonials" class="btn btn-primary custom-button green-btn">TESTIMONIALS</a>
 	</div>
 </div>
 </section>  <!-- / END SEPARATOR -->
@@ -487,7 +487,7 @@
 	                    <i class="icon-design-graphic-tablet-streamline-tablet"></i>
 	                </div>
 	                <div class="stat-text">
-	                <h3 class="white-text red-border-bottom">1,236</h3>
+	                <h3 class="white-text red-border-bottom">743</h3>
 	                <h6>Projects Completed</h6>
 	                </div>
 	            </div>
@@ -513,7 +513,7 @@
 	                    <i class="icon-email-mail-streamline"></i>
 	                </div>
 	                <div class="stat-text">
-	                <h3 class="white-text blue-border-bottom">56,236</h3>
+	                <h3 class="white-text blue-border-bottom">10,000+</h3>
 	                <h6>Follow Ups</h6>
 	                </div>
 	            </div>
@@ -526,7 +526,7 @@
 	                    <i class="icon-receipt-shopping-streamline"></i>
 	                </div>
 	                <div class="stat-text">
-	                <h3 class="white-text yellow-border-bottom">2,519,000</h3>
+	                <h3 class="white-text yellow-border-bottom">2,635,398</h3>
 	                <h6>Dollars Managed</h6>
 	                </div>
 	            </div>
