--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="description" content="Beautiful Responsive Animated OnePage Template" />
-<meta name="keywords" content="Zerif, responsive, html, template, creative"/>
-<meta name="author" content="Mizanur Rahman" />
+<meta name="description" content="Building better businesses" />
+<meta name="keywords" content="business services, trades"/>
+<meta name="author" content="Jon Hill" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Zerif - Responsive One Page Template</title>
+<title>Foundation</title>
 
     
     <!--  
@@ -34,10 +34,10 @@
 <!-- =========================
  FAV AND TOUCH ICONS  
 ============================== -->
-<link rel="shortcut icon" href="images/icons/favicon.ico">
-<link rel="apple-touch-icon" href="images/icons/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="72x72" href="images/icons/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="114x114" href="images/icons/apple-touch-icon-114x114.png">
+<link rel="shortcut icon" href="images/icons/favicon.png">
+<link rel="apple-touch-icon" href="images/icons/favicon.png">
+<link rel="apple-touch-icon" sizes="72x72" href="images/icons/favicon.png">
+<link rel="apple-touch-icon" sizes="114x114" href="images/icons/favicon.png">
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
