--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -202,11 +202,11 @@
 		
         <!-- PROJECT -->	
         <li class="wow fadeInLeft animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
-        <a href="project.html" class="more"><img src="images/portfolio/1.jpg"  alt="project"/>
+        <a href="http://quotes.foundation.is/proposal/584680/f6c3ee72533b5765fd621af16ce64ff68856d00e/" class="more"><img src="images/portfolio/1.png"  alt="project"/>
 			<div class="project-info">
 				<div class="project-details">
 					<h5 class="white-text red-border-bottom">
-					Paint Quote </h5>
+					Example Quote </h5>
 					<div class="details white-text">
 						from unformatted email
 					</div>
@@ -218,11 +218,11 @@
         
         <!-- PROJECT -->	
         <li class="wow fadeInDown animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
-        <a href="project.html" class="more"><img src="images/portfolio/2.jpg" alt="project" />
+        <a href="http://quotes.foundation.is/proposal/584680/f6c3ee72533b5765fd621af16ce64ff68856d00e/" class="more"><img src="images/portfolio/2.png" alt="project" />
 			<div class="project-info">
 				<div class="project-details">
 					<h5 class="white-text red-border-bottom">
-					Invoice </h5>
+					Example Quote </h5>
 					<div class="details white-text">
 						from a phone call
 					</div>
@@ -234,13 +234,13 @@
 
         <!-- PROJECT -->	
         <li class="wow fadeInDown animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
-        <a href="project.html" class="more"><img src="images/portfolio/3.jpg"  alt="project"/>
+        <a href="http://invoices.foundation.is/paymentProcessing?invoiceNum=b7f37adeffd45d64bfb8a31ada7383f3" class="more"><img src="images/portfolio/3.png"  alt="project"/>
 			<div class="project-info">
 				<div class="project-details">
 					<h5 class="white-text red-border-bottom">
-					Weekly Report </h5>
+					Example Invoice </h5>
 					<div class="details white-text">
-						highlighting focus needs
+						from text
 					</div>
 				</div>
 			</div>
@@ -250,11 +250,11 @@
         
 		<!-- PROJECT -->	
         <li class="wow fadeInRight animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
-        <a href="project.html" class="more"><img src="images/portfolio/4.jpg"  alt="project"/>
+        <a href="http://invoices.foundation.is/paymentProcessing?invoiceNum=b7f37adeffd45d64bfb8a31ada7383f3" class="more"><img src="images/portfolio/4.png"  alt="project"/>
 			<div class="project-info">
 				<div class="project-details">
 					<h5 class="white-text red-border-bottom">
-					Catering Proposal </h5>
+					Example Invoice </h5>
 					<div class="details white-text">
 						called in
 					</div>
@@ -266,13 +266,13 @@
         
         <!-- PROJECT -->	
         <li class="wow fadeInLeft animated" data-wow-offset="30" data-wow-duration="1.8s" data-wow-delay="0.15s">
-        <a href="project.html" class="more"><img src="images/portfolio/5.jpg" alt="project"/>
+        <a href="http://quotes.foundation.is/proposal/584680/f6c3ee72533b5765fd621af16ce64ff68856d00e/" class="more"><img src="images/portfolio/5.png" alt="project"/>
 			<div class="project-info">
 				<div class="project-details">
 					<h5 class="white-text red-border-bottom">
-					Project Title </h5>
+					Details Can Sell </h5>
 					<div class="details white-text">
-						Web Design
+						for you!
 					</div>
 				</div>
 			</div>
@@ -282,13 +282,13 @@
 		
         <!-- PROJECT -->	
         <li>
-        <a href="project.html" class="more"><img src="images/portfolio/6.jpg" alt="project"/>
+        <a href="http://quotes.foundation.is/proposal/584680/f6c3ee72533b5765fd621af16ce64ff68856d00e/" class="more"><img src="images/portfolio/6.png" alt="project"/>
 			<div class="project-info">
 				<div class="project-details">
 					<h5 class="white-text red-border-bottom">
-					Project Title </h5>
+					Testimonials  </h5>
 					<div class="details white-text">
-						Web Design
+						Make a difference
 					</div>
 				</div>
 			</div>
@@ -298,13 +298,13 @@
          
          <!-- PROJECT -->	
         <li>
-        <a href="project.html" class="more"><img src="images/portfolio/7.jpg"  alt="project"/>
-			<div class="project-info">
+        <a href="http://quotes.foundation.is/proposal/584680/f6c3ee72533b5765fd621af16ce64ff68856d00e/" class="more" ><img src="images/portfolio/7.png"  alt="project"/>
+			<div class="project-info" >
 				<div class="project-details">
 					<h5 class="white-text red-border-bottom">
-					Project Title </h5>
+					Make the sale easy! </h5>
 					<div class="details white-text">
-						Web Design
+						E-Signatures
 					</div>
 				</div>
 			</div>
@@ -314,77 +314,13 @@
 		
          <!-- PROJECT -->	
         <li class="wow fadeInRight animated" data-wow-offset="30" data-wow-duration="1.8s" data-wow-delay="0.15s">
-        <a href="project.html" class="more"><img src="images/portfolio/8.jpg"  alt="project"/>
+        <a href="#works" class="more"><img src="images/portfolio/8.png"  alt="project"/>
 			<div class="project-info">
 				<div class="project-details">
 					<h5 class="white-text red-border-bottom">
-					Project Title </h5>
+					Reports/Projections </h5>
 					<div class="details white-text">
-						Web Design
-					</div>
-				</div>
-			</div>
-			</a>
-        </li>
-        <!-- / PROJECT -->
-		
-        <!-- PROJECT -->	
-        <li class="wow fadeInLeft animated" data-wow-offset="30" data-wow-duration="2s" data-wow-delay="0.25s">
-        <a href="project.html" class="more"><img src="images/portfolio/9.jpg" alt="project"/>
-			<div class="project-info">
-				<div class="project-details">
-					<h5 class="white-text red-border-bottom">
-					Project Title </h5>
-					<div class="details white-text">
-						Web Design
-					</div>
-				</div>
-			</div>
-			</a>
-        </li>
-        <!-- / PROJECT -->
-		
-        <!-- PROJECT -->	
-        <li class="wow fadeInUp animated" data-wow-offset="30" data-wow-duration="2s" data-wow-delay="0.25s">
-        <a href="project.html" class="more"><img src="images/portfolio/10.jpg" alt="project"/>
-			<div class="project-info">
-				<div class="project-details">
-					<h5 class="white-text red-border-bottom">
-					Project Title </h5>
-					<div class="details white-text">
-						Web Design
-					</div>
-				</div>
-			</div>
-			</a>
-        </li>
-        <!-- / PROJECT -->
-		
-        <!-- PROJECT -->	
-        <li class="wow fadeInUp animated" data-wow-offset="30" data-wow-duration="2s" data-wow-delay="0.25s">
-        <a href="project.html" class="more"><img src="images/portfolio/11.jpg"  alt="project"/>
-			<div class="project-info">
-				<div class="project-details">
-					<h5 class="white-text red-border-bottom">
-					Project Title </h5>
-					<div class="details white-text">
-						Web Design
-					</div>
-				</div>
-			</div>
-			</a>
-        </li>
-        <!-- / PROJECT -->
-		
-        <!-- PROJECT -->	
-        <li class="wow fadeInRight animated" data-wow-offset="30" data-wow-duration="2s" data-wow-delay="0.25s">
-        <a href="project.html" class="more"><img src="images/portfolio/12.jpg"  alt="project"/>
-			<div class="project-info">
-				<div class="project-details">
-					<h5 class="white-text red-border-bottom">
-					Project Title </h5>
-					<div class="details white-text">
-						Web Design
+						Sent to as needed
 					</div>
 				</div>
 			</div>
