--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -742,23 +742,27 @@
 		<div class="col-lg-4 col-sm-4">
 			<div class="package wow fadeInLeft animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
 				<div class="package-header green-bg">
-					<h5>Starter</h5>
+					<h5>Technician</h5>
 				</div>
 				<div class="price dark-bg">
 					<div class="price-container">
-					<h4><span class="dollar-sign">$</span>42</h4><span class="price-meta">
-					    / mo
+					<h4><span class="dollar-sign"></span>FREE</h4><span class="price-meta">
+					    
 					</span>
 					</div>
 				</div>
 				<ul>
-					<li><i class="icon-check"></i>Hosted Profile</li>
-					<li><i class="icon-check"></i>Ulimited Invoices</li>
-					<li><i class="icon-cancel"></i>A-la-carte Quotes</li>
-					<li><i class="icon-cancel"></i>Follow Up</li>
-					<li><i class="icon-cancel"></i>Reports/Suggestions</li>
+					<li><i class="icon-check"></i>Member of Service Network</li>
+					<li><i class="icon-check"></i>Quotes/Work-Orders/Invoices</li>
+					<li><i class="icon-check"></i>Email Follow-up</li>
+					<li><i class="icon-cancel"></i>Phone Follow-Up</li>
+					<li><i class="icon-cancel"></i>Branded Correspondence</li>
+					<li><i class="icon-cancel"></i>Sales/Pipeline Management</li>
+					<li><i class="icon-cancel"></i>Branded URLs</li>
+					<li><i class="icon-cancel"></i>Priority Leads</li>
+					<li><i class="icon-fontawesome-webfont-219"></i>All plans pay 3% on managed revenue and an additional 7% on leads generated</li>					
 				</ul>
-				<a href="#" class="btn btn-primary custom-button green-btn">
+				<a href="#contact" class="btn btn-primary custom-button green-btn">
 				Sign Up </a>
 			</div>
 		</div> <!-- / END FIRST PACKAGE -->
@@ -767,23 +771,27 @@
 			<div class="best-value">
 				<div class="package wow fadeInUp animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
 					<div class="package-header red-bg">
-						<h4>Partner</h4>
+						<h4>Tradesman</h4>
 						<div class="meta-text">
 							Best Value
 						</div>
 					</div>
 					<div class="price dark-bg">
-						<h4>3<span class="dollar-sign">%</span></h4>
-						<span class="price-meta">/ 7%</span>
+						<h4><span class="dollar-sign">$</span>150</h4>
+						<span class="price-meta">/ Mo</span>
 					</div>
 					<ul>
-						<li><i class="icon-check"></i>Hosted Profile</li>
-						<li><i class="icon-check"></i>Unlimited Invoices</li>
-						<li><i class="icon-check"></i>Unlimited Quotes</li>
-						<li><i class="icon-check"></i>Follow Up</li>
-						<li><i class="icon-check"></i>Reports/Suggestions</li>
+					<li><i class="icon-check"></i>Member of Service Network</li>
+					<li><i class="icon-check"></i>Quotes/Work-Orders/Invoices</li>
+					<li><i class="icon-check"></i>Email Follow-up</li>
+					<li><i class="icon-check"></i>Phone Follow-Up</li>
+					<li><i class="icon-check"></i>Branded Correspondence</li>
+					<li><i class="icon-check"></i>Sales/Pipeline Management</li>
+					<li><i class="icon-cancel"></i>Branded URLs</li>
+					<li><i class="icon-cancel"></i>Priority Leads</li>
+					<li><i class="icon-fontawesome-webfont-219"></i>All plans pay 3% on managed revenue and an additional 7% on leads generated</li>					
 					</ul>
-					<a href="#" class="btn btn-primary custom-button red-btn">
+					<a href="#contact" class="btn btn-primary custom-button red-btn">
 				Sign Up </a>
 				</div>
 			</div>
@@ -796,18 +804,22 @@
 				</div>
 				<div class="price dark-bg">
 					<div class="price-container">
-					<h4><span class="dollar-sign">$</span>500 </h4>
+					<h4><span class="dollar-sign">$</span>250 </h4>
 					<span class="price-meta">/ Mo</span>
 					</div>
 				</div>
 				<ul>
-					<li><i class="icon-check"></i>Hosted Profile</li>
-					<li><i class="icon-check"></i>Unlimited Invoices</li>
-					<li><i class="icon-check"></i>50 Quotes</li>
-					<li><i class="icon-cancel"></i>Follow Up</li>
-					<li><i class="icon-cancel"></i>Reports/Suggestions</li>
+					<li><i class="icon-check"></i>Member of Service Network</li>
+					<li><i class="icon-check"></i>Quotes/Work-Orders/Invoices</li>
+					<li><i class="icon-check"></i>Email Follow-up</li>
+					<li><i class="icon-check"></i>Phone Follow-Up</li>
+					<li><i class="icon-check"></i>Branded Correspondence</li>
+					<li><i class="icon-check"></i>Sales/Pipeline Management</li>
+					<li><i class="icon-check"></i>Branded URLs</li>
+					<li><i class="icon-check"></i>Priority Leads</li>
+					<li><i class="icon-fontawesome-webfont-219"></i>All plans pay 3% on managed revenue and an additional 7% on leads generated</li>
 				</ul>
-				<a href="#" class="btn btn-primary custom-button blue-btn">
+				<a href="#contact" class="btn btn-primary custom-button blue-btn">
 				Sign Up </a>
 			</div>
 		</div>
@@ -888,7 +900,7 @@
 							</div>
 						</div>
 						<div class="client-image hidden-xs">
-							<img src="images/clients-pic/1.jpg" alt="">
+							<img src="images/clients-pic/john.jpg" alt="">
 						</div>
 					</div> <!-- / END CLIENT INFORMATION-->
 				</div> <!-- / END SINGLE FEEDBACK BOX-->
@@ -908,7 +920,7 @@
 							</div>
 						</div>
 						<div class="client-image hidden-xs">
-							<img src="images/clients-pic/2.jpg" alt="">
+							<img src="images/clients-pic/josh.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -928,7 +940,7 @@
 							</div>
 						</div>
 						<div class="client-image hidden-xs">
-							<img src="images/clients-pic/3.jpg" alt="">
+							<img src="images/clients-pic/ermin.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -948,7 +960,7 @@
 							</div>
 						</div>
 						<div class="client-image hidden-xs">
-							<img src="images/clients-pic/2.jpg" alt="">
+							<img src="images/clients-pic/bill.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -968,7 +980,7 @@
 							</div>
 						</div>
 						<div class="client-image hidden-xs">
-							<img src="images/clients-pic/3.jpg" alt="">
+							<img src="images/clients-pic/david.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -988,7 +1000,7 @@
 							</div>
 						</div>
 						<div class="client-image hidden-xs">
-							<img src="images/clients-pic/1.jpg" alt="">
+							<img src="images/clients-pic/ronnie.jpg" alt="">
 						</div>
 					</div>
 				</div>
