--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -486,7 +486,7 @@
 		
 		<!-- SHORT DESCRIPTION ABOUT THE SECTION -->
 		<h6>
-			Check our awesome team memebers who always work hard to provide quality services. 
+			Check our awesome team members who always work hard to provide quality services. 
 		</h6>
 	</div>
 	<!-- / END SECTION HEADER -->
@@ -570,7 +570,7 @@
 				</div>
 				<div class="details">
 					<p>
-						When it comes right down to it, CJ holds things together.  He doesn't just say, "yes," he says, "yes, and I will do it better that".  From quotes, to invoices, to templates, and more...he makes the world go round. 
+						When it comes right down to it, CJ holds things together.  He doesn't just say, "yes," he says, "yes, and I will do it better".  From quotes, to invoices, to templates, and more...he makes the world go round. 
 					</p>
 				</div>
 			</div>
@@ -967,7 +967,7 @@
 				
 				<div class="feedback-box">
 					<div class="message">
-						 “Well, the bad news is my gross receipts is going to be higher in 2014... but the good news is THAT MY GROSS RECEIPTS TAX IS GOING TO BE HIGHER IN 2014!!!”
+						 “Well, the good news is my gross receipts is going to be higher in 2014... but the bad news is THAT MY GROSS RECEIPTS TAX IS GOING TO BE HIGHER IN 2014!!!”
 					</div>
 					<div class="client">
 						<div class="quote green-text">
